--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,9 @@
 
 /* #region Debug */
 
-* {
-    /* border: 1px dashed deepskyblue; */
-}
-
-header {
-    background-color: navy;
-    color: aliceblue;
-}
+/* * {
+    border: 1px dashed deepskyblue;
+} */
 
 main {
 
@@ -26,25 +21,23 @@ main {
         }
     }
 }
+/* #endregion Debug */
 
-footer {
-    .top {
-        & [class^="col"] {
-            height: 50px;
-            background-color: deeppink;
-        }
-    }
+/* #region header */
 
-    .bottom {
-        background-color: navy;
-        color: aliceblue;
+header {
+    background-color: var(--boot-bg-primary);
+    color: var(--boot-lightest);
+
+    .menu {
+        border: 2px solid var(--boot-lightest);
     }
 }
 
-
-/* #endregion Debug */
+/* #endregion header */
 
 /* #region main */
+
 .hero_page {
     background-color: var(--boot-bg-secondary);
 
@@ -80,5 +73,29 @@ footer {
     }
 }
 
-
 /* #endregion main */
+
+/* #region footer */
+
+footer {
+    color: var(--boot-lightest);
+
+    .top {
+        background-color: var(--boot-bg-primary-subtle);
+
+        .fa-stack {
+            color: var(--boot-lightest);
+        }
+
+        & span {
+            color: var(--boot-bg-secondary);
+        }
+    }
+    
+    .bottom {
+        background-color: var(--boot-bg-primary);
+        font-size: 0.7rem;
+    }
+}
+
+/* #region footer */
